fix layout issue

--- a/assets/css/layout/app/_profile.scss
+++ b/assets/css/layout/app/_profile.scss
@@ -12,6 +12,7 @@
 			display: flex;
 			flex-direction: row;
 			align-items: center;
+			margin-top: 30px;
 
 
 
@@ -25,7 +26,7 @@
 					width: 150px;
 					border: solid 1px $primary-color;
 					border-radius: 250px;
-					box-shadow: 4px 5px 5px rgb(28, 28, 28);
+					box-shadow: 4px 5px 5px rgba(28, 28, 28, .05);
 					object-fit: cover;
 				}
 			}
@@ -50,7 +51,7 @@
 			aside{
 				width: 300px;
 				max-width: 100%;
-				background-color: #333;
+				background-color: #f5f5f5;
 				padding: 20px;
 				margin-right: 20px;
 				border-radius: 10px;
@@ -64,7 +65,7 @@
 				ul li a{
 					padding: 10px;
 					display: block;
-					background-color: #2a2a2a;
+					background-color: #e9e9e9;
 					margin-bottom: 10px;
 					border-radius: 5px;
 					transition: all 400ms;
@@ -77,7 +78,7 @@
 			}
 			&--content{
 				max-width: 100%;
-				background-color: #333;
+				background-color: #f5f5f5;
 				padding: 20px;
 				border-radius: 10px;
 				width: 100%;
