--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -27553,6 +27553,7 @@ label, .form-label {
   display: flex;
   flex-direction: row;
   align-items: center;
+  margin-top: 30px;
 }
 @media (max-width: 767.98px) {
   .app .app__profile .profile__header {
@@ -27565,7 +27566,7 @@ label, .form-label {
   width: 150px;
   border: solid 1px #E54C8E;
   border-radius: 250px;
-  box-shadow: 4px 5px 5px rgb(28, 28, 28);
+  box-shadow: 4px 5px 5px rgba(28, 28, 28, 0.05);
   object-fit: cover;
 }
 .app .app__profile .profile__header .bio {
@@ -27587,7 +27588,7 @@ label, .form-label {
 .app .app__profile .profile__section aside {
   width: 300px;
   max-width: 100%;
-  background-color: #333;
+  background-color: #f5f5f5;
   padding: 20px;
   margin-right: 20px;
   border-radius: 10px;
@@ -27602,7 +27603,7 @@ label, .form-label {
 .app .app__profile .profile__section aside ul li a {
   padding: 10px;
   display: block;
-  background-color: #2a2a2a;
+  background-color: #e9e9e9;
   margin-bottom: 10px;
   border-radius: 5px;
   transition: all 400ms;
@@ -27613,7 +27614,7 @@ label, .form-label {
 }
 .app .app__profile .profile__section--content {
   max-width: 100%;
-  background-color: #333;
+  background-color: #f5f5f5;
   padding: 20px;
   border-radius: 10px;
   width: 100%;
